<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInFragment">

    <!-- Logo -->
    <ImageView
        android:id="@+id/budgeLogo"
        android:layout_width="405dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintBottom_toTopOf="@+id/heroPic1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/budgelogo__1_" />

    <!-- Hero image -->
    <ImageView
        android:id="@+id/heroPic1"
        android:layout_width="312dp"
        android:layout_height="236dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/hero_desc"
        app:layout_constraintBottom_toTopOf="@+id/frameSection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/budgeLogo"
        app:srcCompat="@drawable/brazuca___pride_standing_1__1_" />

    <!-- Frame with rounded border -->
    <FrameLayout
        android:id="@+id/frameSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/rounded_border"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heroPic1">

        <!-- Content inside the frame -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign into your account"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/emailTxt"
                android:layout_width="245dp"
                android:layout_height="48dp"
                android:hint="Username"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/passwordTxt"
                android:layout_width="241dp"
                android:layout_height="48dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:importantForAutofill="yes"
                app:layout_constraintTop_toBottomOf="@id/emailTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="235dp"
                android:layout_height="48dp"
                android:text="Sign In"
                android:backgroundTint="@android:color/black"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@id/passwordTxt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

            <!-- Register link under Sign In Button -->
            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register_prompt"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/btnSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
